tests/ui/rfcs/rfc-2126-extern-absolute-paths/single-segment.stderr
error: imports need to be explicitly named
  --> $DIR/single-segment.rs:5:5
   |
LL | use crate;
   |     ^^^^^
   |
help: try renaming it with a name
   |
LL | use crate as name;
   |           +++++++

error: cannot glob-import all possible crates
  --> $DIR/single-segment.rs:6:5
   |
LL | use *;
   |     ^

error[E0423]: expected value, found crate `xcrate`
  --> $DIR/single-segment.rs:9:13
   |
LL |     let s = ::xcrate;
   |             ^^^^^^^^ not a value

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0423`.
